# pricing-api

./: .gitignore  README.md  example_usage.py  get_prices.ipynb  main.py  pricing_api.py  pricing_service.py  pyproject.toml  template_config.yaml
tests/: test_fetch_prices.py
